--- a/css/app.css
+++ b/css/app.css
@@ -75,7 +75,7 @@ h2{
 	font-family: 'Roboto', sans-serif;
 	font-size: 2.05em;
 	color: white;
-	position: absolute;
+	position: fixed;
 	top: 2%;
 	left: 10%;
 	z-index: 95;
